Fix dropdown menu scrolling on small screens

--- a/bootstrap/less/custom.less
+++ b/bootstrap/less/custom.less
@@ -119,6 +119,10 @@ nav.navbar-default {
         .dropdown-menu {
             font-size: ceil((@font-size-base * 1.1)); // ~15.4px
             min-width: 260px; // prettify dropdown menus for short text
+
+            // Support scrolling for long dropdowns on short screens
+            max-height: 65vh;
+            overflow-y: scroll;
         }
     }
 }
